<resources>
    <string name="app_name">DentApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="btn_forgot_password">Olvidó su password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_link_to_register">No es miembro? Puede registrarse ahora!</string>
    <string name="btn_link_to_login">Registrado con exito. Ingresar!</string>
    <string name="btn_login">LOGIN</string>
    <string name="minimum_password">Password demasiado corta, ingresar 6 caractéres como mínimo!</string>
    <string name="auth_failed">La autenticación falló, verificar email y password o registrarse</string>

    <string name="action_sign_in_short">Registrar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
